# snappy-py

./: LICENSE  README.md  benchmark.py  pyproject.toml  setup.py
src/: snappy_module.c
